--- a/css/styles.css
+++ b/css/styles.css
@@ -16,61 +16,144 @@ html{
    Base
 ------------------------------------------------------------------------------*/
 
+body{
+    background: #000 url("../images/fond/global.png") repeat;
+    font: 1.6em "Oranienbaum", serif;
+    color: white;
+}
 
+a{
+    color: white;
+    text-decoration: none;
+}
 
+a:hover{
+    color: darkorange;
+}
 
 
 
 /*------------------------------------------------------------------------------
-   Modules
+Modules
 ------------------------------------------------------------------------------*/
 
 /* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
 
+header, section{
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+.boite{
+    width: 800px;
+    padding: 48px;
+    background-color: rgba(0, 0, 0, 0.8);
+    border-radius: 10px;
+}
+
+.images{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.images a{
+    width: 200px;
+    margin: 10px 0;
+    text-align: center;
+}
+
+h1{
+    font: 10.0em "Monoton", sans-serif;
+}
+
+h2{
+    font: 3.2em "Monoton", sans-serif;
+    margin: 0;
+    text-transform: uppercase;
+}
+
+h2 span{
+    font-family: "Oranienbaum", serif;
+    font-size: 0.5em;
+    text-transform: capitalize;
+}
+
+/*---------------------------------------
+header
+---------------------------------------*/
+
+/* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
+
+header{
+    text-align: center;
+    position: relative;
+}
+
+header a{
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+
+/*---------------------------------------
+Section Générale
+---------------------------------------*/
+
+/* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
+
+a img{
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+
+/*---------------------------------------
+Section sports
+---------------------------------------*/
+
+/* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
+
+.sports{
+    background: url("../images/fond/bicycles.png") repeat;
+}
 
 
 
 /*---------------------------------------
-                header
- ---------------------------------------*/
+Section web
+---------------------------------------*/
 
 /* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
 
+.web{
+    background: url("../images/fond/science.png") repeat;
+}
 
+.web img{
+    width: 50%;
+}
 
+.web .images{
+    padding-bottom: 50px;
+}
 
+.web .images a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
-/*---------------------------------------
-                Section Générale
- ---------------------------------------*/
-
-/* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
-
-
-
-
-/*---------------------------------------
-                Section sports
- ---------------------------------------*/
-
-/* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
-
-
-
-
-
-/*---------------------------------------
-                Section web
- ---------------------------------------*/
-
-/* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
-
-
-
-
-
-
+.lien_float{
+    background-color: darkred;
+    text-align: center;
+    padding: 10px;
+}
 
 /*---------------------------------------
              Section photographie
@@ -78,7 +161,9 @@ html{
 
 /* INSÉREZ VOTRE CSS POUR CETTE SECTION ICI */
 
-
+.photos{
+    background: url("../images/fond/fond.jpg") no-repeat center/cover;
+}
 
 /*---------------------------------------
     Icône retour
