--- a/css/styles.css
+++ b/css/styles.css
@@ -165,6 +165,21 @@ Section web
     background: url("../images/fond/fond.jpg") no-repeat center/cover;
 }
 
+.photos img{
+    width: 30%;
+}
+
+.photos .images{
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    
+}
+
+.photos a{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 /*---------------------------------------
     Icône retour
 ---------------------------------------*/
